# oculuslab-laboratorio-graphai

./: TODO.md
backend/: pyproject.toml  test_edge.py  test_sample.py
backend/app/: app.py
backend/app/api/: __init__.py  analysis.py  graph.py
backend/app/models/: __init__.py  analysis.py  anatomy.py  bpo.py  cco.py  disease.py  drug.py  edge.py  exposure.py  gene.py  graph.py  mfn.py  pathway.py  phenotype.py
backend/app/services/: clusterizador.py  optimus_service.py
backend/docs/: ENDPOINT_DRUG_REPURPOSING.md  FRONTEND_API_GUIDE.md  MASTER_API_REFERENCE.md  PROPOSITO_ANALISIS_REDES.md  api_graph.md  api_v1_documentation.md  dataset_analysis.json  dataset_documentation.md  node_metadata_analysis.json  node_properties_documentation.md
backend/labs/lab1/: exp1.py  exp2.py  exp3_topology.py  exp4_ml_gen.py  main.py  ml_clustering_proposal.md  ver2.py
backend/scripts/: analyze_graph.py  analyze_node_properties.py  discover_edge_relations.py  discover_node_types.py  generate_docs.py  inspect_datasets.py  test_repurpose.py  validate_ana.py  validate_bpo.py  validate_cco.py  validate_diseases.py  validate_drugs.py  validate_edges.py  validate_exp.py  validate_genes.py  validate_mfn.py  validate_phe.py  validate_pwy.py
backend/tests/: __init__.py  test_api_analysis.py  test_api_discovery.py  test_api_graph.py  test_optimus_service.py
frontend/: RULES.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/docs/: api.md
frontend/scripts/: analyze_json.py  json_prueba.json
frontend/src/: App.tsx
(+17 files in other folders)
