[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "optimuskg>=1.0.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "umap-learn>=0.5.12",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
